# coooooooler

./: .gitignore  Cargo.toml  README.md  Taskfile.yml
config/: mac15_10-m3-max.yaml
src/: app_settings.rs  config.rs  control_backend.rs  fan_control.rs  gui.rs  helper_client.rs  helper_install.rs  helper_paths.rs  helper_protocol.rs  helper_server.rs  lib.rs  main.rs  platform.rs  runtime.rs  sensor_profile.rs  single_instance.rs  smc_controller.rs
