[package]
name = "apple-silicon-fan-control"
version = "0.1.0"
edition = "2024"
default-run = "apple-silicon-fan-control"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6.0.0"
eframe = "0.34.1"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smc-lib = "0.1.2"
